# rip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
ci/: before_deploy.sh
src/: main.rs  util.rs
