[package]
edition = '2018'
name = "rm-improved"
version = "0.14.1"
authors = ["mail@nivekuil.com", "even.solberg@gmail.com"]
description = "rip: a safe and ergonomic alternative to rm"
repository = "https://github.com/nivekuil/rip"
readme = "README.org"
license = "GPL-3.0+"
include = [
    "**/*.rs",
    "Cargo.toml",
]
categories = ["command-line-utilities"]
autobins = false

[dependencies]
clap = { version = "4.3.3", features = ["cargo", "wrap_help"] }
walkdir = "2.3.3"
time = { version = "0.3.22", features = ["local-offset", "formatting"] }
error-chain = "0.12"

[profile.release]
opt-level = "s"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "rip"
path = "src/main.rs"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
